[project]
name = "qhld-data"
version = "1.3.0"
description = "QHLD Data"
authors = [{ name = "pr3ssh" }]
requires-python = ">=3.12"

dependencies = [
    "pydantic>=2.7,<3",
    "mongoengine==0.29.3",
    "pymongo==4.17.0",
    "regex==2026.5.9",
    "six==1.17.0",
    "natsort==8.4.0",
    "python-slugify==8.0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tipi_data"]
