[project]
name = "qhld-data"
version = "2.0.0"
description = "QHLD Data"
authors = [{ name = "pr3ssh" }]
requires-python = ">=3.12"

dependencies = [
    "pydantic==2.13.4",
    "pymongo==4.17.0",
    "regex==2026.5.9",
    "python-slugify==8.0.4",
]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "testcontainers[mongodb]==4.14.2",
]

[tool.pytest.ini_options]
# Listed unit-first so the fast no-infra tests run before the container-backed ones.
testpaths = ["tests/unit", "tests/integration"]
markers = [
    "unit: no-infra tests; run anywhere with no Mongo/Docker. Filter with `-m unit`.",
    "integration: need a throwaway Mongo (testcontainers); auto-skip when Docker is unavailable. Filter with `-m integration`.",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tipi_data"]
